@@ -7,6 +7,8 @@ TODO: Never overwrite .xsession.old
 10-Apr-2004
 ~~~~~~~~~~~
 Start a session D-BUS daemon running on login, if one isn't running already.
+Added 'Session Settings...' to app menu (uses dbus to send the request to
+the master ROX-Session process).
 
 05-Apr-2004
 ~~~~~~~~~~~
